--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
   <title>HELLO</title>
 </head>
 <body>
-  <h1><script>document.write('Hello!')</script></h1>
+  <h1>Hello</h1>
+  <script src="script.js"></script>
 </body>
 </html>
