--- a/hello.html
+++ b/hello.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>HELLO</title>
-</head>
-<body>
-  <h1>Hello</h1>
   <script src="script.js"></script>
-</body>
+</head>
+
+<body onload="initial();">
+  <h1>Hello</h1>
+  <p id="msg"></p>
+  <input type="text" id="input">
+  <input type="button" value="Click" onclick="doclick();">
+ </body>
 </html>
