--- a/JavaScriptGame/canvas-line-mouse1.html
+++ b/JavaScriptGame/canvas-line-mouse1.html
@@ -8,5 +8,6 @@
   <body onload="init()">
     <canvas id="canvas" width="500" height="500"
     style="width: 500; height: 500; border: 1px solid black;"></canvas>
-  </body>
+    <button id="button">クリア</button>
+    </body>
 </html>
