--- a/JavaScriptGame/ReversiblePiece/reversible.html
+++ b/JavaScriptGame/ReversiblePiece/reversible.html
@@ -10,7 +10,7 @@
 </head>
 <body onload="init()">
   <h2>
-    黒（あなた）：<span id="numBlack"></span>>枚
+    黒（あなた）：<span id="numBlack"></span>枚
     白（ＰＣ）：<span id="numWhite"></span>枚
   </h2>
   <table id="board"></table>
