マスを10個プログラムで作る

--- a/JavaScriptGame/Tetris/tetris.html
+++ b/JavaScriptGame/Tetris/tetris.html
@@ -8,10 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="main.js"></script>
 </head>
-<body>
-  <table>
-    <tr><td></td><td></td></tr>
-    <tr><td></td><td></td></tr>
-  </table>
+<body onload="init()">
+  <div id="view"></div>
 </body>
 </html>
