--- a/JavaScriptGame/Tetris/tetris.html
+++ b/JavaScriptGame/Tetris/tetris.html
@@ -9,6 +9,7 @@
   <script src="main.js"></script>
 </head>
 <body onload="init()">
+  <div id="info"></div>
   <div id="view"></div>
 </body>
 </html>
