当たり判定をつける

--- a/JavaScriptGame/Tetris_canvas/tetris.html
+++ b/JavaScriptGame/Tetris_canvas/tetris.html
@@ -7,7 +7,7 @@
   <script src="main.js"></script>
   <title>Tetris</title>
 </head>
-<body onload="init()">
+<body onload="main()">
   <canvas id="can"></canvas>
 </body>
 </html>
