--- a/JavaScriptGame/FunkyBlocks/funkyblocks.html
+++ b/JavaScriptGame/FunkyBlocks/funkyblocks.html
@@ -13,7 +13,7 @@
   <audio src="sound.mp3" id="sound"></audio>
   <audio src="letsgo.mp3" id="bgm"></audio>
   <canvas id="canvas" width="800" height="600"></canvas>
-  <img id="START" src="start.png" style="display:none" />
+  <img id="START" src="start.png" onclick="go()"><br/>
   <img id="bgimage" src="back.png" style="display:none" />
   <img id="block0" src="block0.png" style="display:none" />
   <img id="block1" src="block1.png" style="display:none" />
